# modelling-sandwich-store

./: .gitignore  CMakeLists.txt  README.md  main.c  p_queue.h  params.txt  queue.h  random.c  random.h  stack.c  stack.h
data_structures/queue/: p_queue.h  queue.c  queue.h
store_queue/: store_queue.c  store_queue.h
store_stack/: store_stack.c  store_stack.h
